Completed loots.yml

--- a/Farms/loots.yml
+++ b/Farms/loots.yml
@@ -2,6 +2,120 @@
 # File version: 1.0
 # Format: MIN-MAX:XMATERIAL
 
-cow:
+BLAZE:
+  - "0-1:BLAZE_ROD"
+CAT:
+  - "0-2:STRING"
+CAVE_SPIDER:
+  - "0-2:STRING"
+CHICKEN:
+  - "0-2:FEATHER"
+  - "1-1:CHICKEN"
+COD:
+  - "1-1:COD"
+COW:
   - "1-3:BEEF"
   - "0-2:LEATHER"
+CREEPER:
+  - "0-2:GUNPOWDER"
+DOLPHIN:
+  - "0-1:COD"
+DONKEY:
+  - "0-2:LEATHER"
+DROWNED:
+  - "0-2:ROTTEN_FLESH"
+ELDER_GUARDIAN:
+  - "1-1:WET_SPONGE"
+  - "0-1:COD"
+  - "0-2:PRISMARINE_SHARD"
+ENDERMAN:
+  - "0-1:ENDER_PEARL"
+EVOKER:
+  - "1-1:TOTEM_OF_UNDYING"
+  - "0-1:EMERALD"
+GHAST:
+  - "0-1:GHAST_TEAR"
+  - "0-2:GUNPOWDER"
+GLOW_SQUID:
+  - "1-3:GLOW_INK_SAC"
+GUARDIAN:
+  - "0-1:COD"
+  - "0-2:PRISMARINE_SHARD"
+HOGLIN:
+  - "2-4:PORKCHOP"
+  - "0-1:LEATHER"
+HORSE:
+  - "0-2:LEATHER"
+HUSK:
+  - "0-2:ROTTEN_FLESH"
+IRON_GOLEM:
+  - "3-5:IRON_INGOT"
+  - "0-2:POPPY"
+LLAMA:
+  - "0-2:LEATHER"
+MAGMA_CUBE:
+  - "0-1:MAGMA_CREAM"
+MULE:
+  - "0-2:LEATHER"
+MUSHROOM_COW:
+  - "0-2:LEATHER"
+  - "1-3:BEEF"
+PANDA:
+  - "1-2:BAMBOO"
+PARROT:
+  - "1-2:FEATHER"
+PHANTOM:
+  - "0-1:PHANTOM_MEMBRANE"
+PIG:
+  - "1-3:PORKCHOP"
+POLAR_BEAR:
+  - "0-1:COD"
+PUFFERFISH:
+  - "1-1:PUFFERFISH"
+RABBIT:
+  - "0-1:RABBIT_HIDE"
+  - "1-1:RABBIT"
+RAVAGER:
+  - "1-1:SADDLE"
+SALMON:
+  - "1-1:SALMON"
+SHEEP:
+  - "1-1:WHITE_WOOL"
+  - "1-2:MUTTON"
+SHULKER:
+  - "0-1:SHULKER_SHELL"
+SKELETON:
+  - "0-2:BONE"
+  - "0-2:ARROW"
+SKELETON_HORSE:
+  - "0-2:BONE"
+SLIME:
+  - "0-2:SLIME_BALL"
+SNOWMAN:
+  - "0-15:SNOWBALL"
+SPIDER:
+  - "0-2:STRING"
+SQUID:
+  - "1-3:INK_SAC"
+STRAY:
+  - "0-2:BONE"
+  - "0-2:ARROW"
+STRIDER:
+  - "2-5:STRING"
+TROPICAL_FISH:
+  - "1-1:TROPICAL_FISH"
+TURTLE:
+  - "0-2:SEAGRASS"
+VINDICATOR:
+  - "0-1:EMERALD"
+WITHER:
+  - "1-1:NETHER_STAR"
+WITHER_SKELETON:
+  - "0-2:BONE"
+ZOGLIN:
+  - "1-3:ROTTEN_FLESH"
+ZOMBIE:
+  - "1-3:ROTTEN_FLESH"
+ZOMBIFIED_PIGLIN:
+  - "0-1:ROTTEN_FLESH"
+  - "0-1:GOLD_NUGGET"
