--- a/Farms/loots.yml
+++ b/Farms/loots.yml
@@ -1,5 +1,5 @@
 # Automatically downloaded and updated from https://github.com/Lorenzo0111/PluginsDatabase/blob/master/Farms/loots.yml
-# File version: 1.0
+# File version: 1.1
 # Format: MIN-MAX:XMATERIAL
 
 BLAZE:
@@ -108,6 +108,8 @@ TURTLE:
   - "0-2:SEAGRASS"
 VINDICATOR:
   - "0-1:EMERALD"
+WARDEN:
+  - "1-1:SCULK_CATALYST"
 WITHER:
   - "1-1:NETHER_STAR"
 WITHER_SKELETON:
