Update loots config to 1.21

--- a/Farms/loots.yml
+++ b/Farms/loots.yml
@@ -60,6 +60,9 @@ MULE:
 MUSHROOM_COW:
   - "0-2:LEATHER"
   - "1-3:BEEF"
+MOOSHROOM:
+  - "0-2:LEATHER"
+  - "1-3:BEEF"
 PANDA:
   - "1-2:BAMBOO"
 PARROT:
